commented out a part in template

--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -7,10 +7,10 @@
 <div class="jumbotron">
     <h2>You're viewing playlist details</h2>
 
-    <h1>{{ playlist.name }}!</h1>
+    <!-- <h1>{{ playlist.name }}!</h1>
     {% if playlist.description %}
     <p class="lead">{{ playlist.description }}</p>
-    {% endif %}
+    {% endif %} -->
 </div>
 
 
